--- a/PieSwitchDHT/freeboard_config.json
+++ b/PieSwitchDHT/freeboard_config.json
@@ -82,7 +82,7 @@
      "type": "gauge",
      "settings": {
       "title": "Temp",
-      "value": "datasources[\"switchDS\"][\"{APPID}/dht\"].split(',')[0]",
+      "value": "datasources[\"switchDS\"][\"/{APPID}/dht\"].split(',')[0]",
       "units": "C",
       "min_value": 0,
       "max_value": "50"
@@ -106,7 +106,7 @@
      "type": "gauge",
      "settings": {
       "title": "Humid",
-      "value": "datasources[\"switchDS\"][\"{APPID}/dht\"].split(',')[1]",
+      "value": "datasources[\"switchDS\"][\"/{APPID}/dht\"].split(',')[1]",
       "units": "%",
       "min_value": 0,
       "max_value": 100
